<resources>
    <string name="app_name">Кофейная гуща</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Surname</string>
    <string name="nav_header_subtitle">name.surname@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_goTo">Go to our webSite</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">Виды кофе</string>
    <string name="menu_cosiness">Немного уюта</string>
    <string name="menu_info">Кратко о кофе</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="article_title">Краткая история кофе</string>
    <string name="article_subtitle">С него начинают утро две трети жителей Земли.</string>
    <string name="coffee">Кофе – величайший путешественник всех времен и народов. В Европе кофе известен всего 300 лет, на самом же деле — он отметил свой тысячелетний юбилей.

Речь идет о самом восхитительном напитке на Земле — о кофе.

Год, примерно, 902 — легендарная история открытия кофе

История кофе — начало.. Давным-давно, примерно в X веке, в далекой жаркой Эфиопии, в горной местности под названием Каффа, обыкновенные козы совершили настоящее открытие. Молодой пастух Калди заметил, что его подопечные старательно объедают красноватые ягоды с небольших кустарников, после чего начинают резвиться с утроенной силой. Любознательный пастух решил попробовать ягоды и листья. На вкус они ему не понравились, однако вскоре юноша заметил, что его покинула усталость, да и настроение заметно улучшилось. Калди рассказал об удивительных ягодах своим родственникам и друзьям, и скоро весть о них разлетелась по всей округе.

    </string>
    <string name="coffee1">От пастуха о чудодейственных свойствах необычных листьев и ягод узнали монахи-миссионеры. Открытие эфиопских коз их очень заинтересовало – в результате долгой работы, путем проб и ошибок, они смогли составить рецепт отвара из кофейных листьев, чудодейственная сила которого возвращала человеку бодрость и силу, изгоняла хандру и помогала не засыпать во время длительных молитв. Придумали монахи и первый кофейный напиток: ягоды с эфиопских кустов просто вымачивались в воде. Позже те же монахи нашли способ сохранять энергетические плоды во время их перевозки к другим монастырям: ягоды кофе сушились на солнце и долго не портились.

Согласно персидской легенде пророк Мохаммед, впервые попробовав кофе, почувствовал себя способным победить 40 всадников и овладеть 50 женщинами.</string>
    <string name="coffee2">Сегодня производство кофе — гигантская отрасль, в работе которой заняты свыше 20 миллионов человек по всему миру. Этот ценный товар занимает второе место после нефти на международных рыночных торгах.С учётом того, что ежегодно употребляется более 400 миллиардов чашек кофе, это — самый популярный напиток во всём мире. В одной только Бразилии около пяти миллионов человек занимаются выращиванием и сбором урожая с более чем трех миллиардов кофейных деревьев.\n А вы любите кофе?\n Добро пожаловать в наш круг кофеманов!</string>
    <string name="espresso">Эспре́ссо (от итал. espresso) — метод приготовления кофе путём прохождения горячей воды (около 90 °C) под давлением 9 бар через фильтр с молотым кофе.</string>
    <string name="machiato">Макиато (итал.«запятнанный кофе», «кофе макиато») — кофейный напиток, изготавливаемый из порции эспрессо и небольшого количества молока, обычно взбитого.</string>
    <string name="capucino">Капучи́но(от итал. cappuccino — капуцин) — кофейный напиток итальянской кухни на основе эспрессо с добавлением в него подогретого вспененного молока.</string>
    <string name="latte">Ла́тте (итал. caffè latte— «кофе с молоком»)— кофейный напиток родом из Италии, состоящий из молока (итал. latte) и кофе эспрессо. Варится на основе молока, образуя в чашке или бокале трёхслойную смесь из кофе, молока и пены</string>
    <string name="mokko">Моккачино(итал. mocaccino, caffè mocha, также известен как «мо́кко» или «мо́кка») — кофейный напиток, созданный в Америке и являющийся разновидностью латте с добавлением шоколада.</string>
    <string name="conPana">Кон панна в переводе с итальянского con panna означает «со сливками». Кофе кон панна украшают шапкой сливок, взбитых в крутую пену, до устойчивых пиков.  </string>
    <string name="affogato">Аффогато (итал. аffogato — утонувший) — десерт на основе кофе.Десерт готовится из ванильного мороженого, которое заливается порцией горячего эспрессо. Существуют разновидности десерта с добавлением амаретто или другого ликера.</string>
    <string name="flatWhite">Флэт уайт (англ. Flat white, «плоский белый») — кофейный напиток родом из Австралии, придуманный в 1980-х годах. Готовится путём добавления нагретого паром молока с небольшим количеством пены (0,5 см) в двойную порцию эспрессо.</string>
    <string name="americano">Америка́но (итал. Caffè Americano — кофе по-американски) — способ приготовления кофе, заключающийся в соединении определённого количества горячей воды и эспрессо.</string>
    <string name="Irish">Айриш кофе – это ирландский напиток, который готовится из горячего кофе, ирландского виски, сахара и украшенный взбитыми сливками.</string>
    <string name="Iced">Большинство из нас привыкло пить кофе горячим, но на самом деле он может стать отличным прохладительным напитком, который взбодрит и освежит в жаркие дни. Этот напиток называют айс-кофе.</string>
    <string name="Frappe">Кофе фраппе́ (фр. frappé — охлаждённый) — покрытый молочной пеной холодный кофейный напиток греческого происхождения, наиболее популярный в Греции и на Кипре.</string>
    <string name="raf">Раф-кофе (сокр. «Раф») — популярный странах бывшего СССР кофейный напиток.Основное отличие от латте — в использовании ванильного сахара и сливок вместо молока. Часто подаётся с сиропом.</string>
    <string name="open_camera">Open Camera</string>
    <string name="learning">Кофемания захлестнула современный мир, а кофе приобретает огромную популярность. Начинать день с чашки ароматного и бодрящего напитка стало классикой жителей многих крупных стран. Постоянная реклама кофе, рост кофеен, востребованность в грамотных специалистах на рынке , делают профессию бариста одной из значимых в сфере услуг. Бариста стал трендом. Поэтому качественное обучение на бариста – это одно из актуальных направлений настоящего.</string>
    <string name="learning2">Курсы по приготовлению кофе в «Кофе Мастер» - это развитие ваших навыков и умений, которые помогут вам построить будущую карьеру. Мы научим варить кофе с нуля и покажем все тонкости кофейного производства.</string>
    <string name="learning3">Почему выгодно пройти обучение на бариста в компании Кофе Mастер?</string>
    <string name="text_learn">-Индивидуальное обучение.\n-10% теории и 90% практики.\n-Лицензированный сертификат.\n-Справедливое соотношение цена/результат.\n-Помощь при трудоустройстве.\n-Групповые занятия (2-3 человека)</string>
    <string name="learn5">Наши курсы бариста рассчитаны как для профессионалов, так и новичков. Обучение и приготовление кофе будет происходить на новом, профессиональном, дорогостоящем оборудовании из Италии.</string>
    <string name="learn9">Цены на обучение на бариста в компании Кофе Mастер:</string>
    <string name="learning8">-Длительность: 14 дней.\n-Стоимость курса: 10000 сомов.\n-Сложные рисунки Молоко и кофе (входит в стоимость)</string>
    <string name="uploadImages">Set your image</string>
    <string name="action_pic">Pictures</string>
    <string name="starbucks_madeo_ru">«Подумайте о кофе как о музыкальном диске. Можно слушать его в специальной комнате для прослушивания, которую вы обустроили специально для этой цели в подвале дома, где нет отвлекающих звуков, где можно надеть наушники и услышать партию струнных или гобоев, или попытаться расслышать каждый маленький щелчок или скрип ногтя Эрика Клэптона об гитару. Другое дело - вставить его в проигрыватель в машине, открыть все окна и начать орать во всю глотку. Музыка та же, а подход другой.» — Говард Шульц, Дори Джонс Йенг. «Влейте в нее свое сердце. Как чашка за чашкой строилась Starbucks».</string>
    <string name="poem">Утро. Солнце. Чашка кофе.\n Хочешь, вместо молока,\n По небес пройдя дороге,\n Я добавлю облака...\n Я добавлю счастья ложку.\n Хочешь, даже не одну.\n Свои чувства на ладошке\n Вместе с кофе протяну.\n Я добавлю горсть улыбок.\n И мечты твои из снов.\n Музыку цветочных скрипок\n А ещё... свою любовь!\n</string>
    <string name="coffee_article">Самая известная цитата о кофе гласит, что именно с этого напитка и начинается утро. Для множества людей по всему миру это действительно так. Миллионы людей не представляют своей жизни без кофе. Для них кофе — источник счастья и наслаждения, предмет обожания и заряд бодрости.</string>
</resources>