<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.info.InfoFragment"
    android:background="#252223">
    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#252223"
        android:padding="@dimen/padding_regular"
        android:text="Обучение на бариста"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_heading"
        android:layout_margin="10dp"
        android:background="#252223"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learning"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/barista"/>
            <TextView
                android:id="@+id/articleF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learning3"
                android:layout_margin="10dp"
                android:textSize="16dp"
                android:textColor="#540ABF"/>
            <TextView
                android:id="@+id/article2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learning2"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/serna"/>
            <TextView
                android:id="@+id/article3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="Вы получите:"
                android:layout_margin="10dp"
                android:textColor="#540ABF"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/article4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/text_learn"
                android:layout_marginLeft="30dp"
                android:textColor="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                />
            <TextView
                android:id="@+id/article5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learn5"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"
               />

            <TextView
                android:id="@+id/article6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learn9"
                android:layout_margin="10dp"
                android:textColor="#540ABF"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/article8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/learning8"
                android:layout_marginLeft="30dp"
                android:textColor="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:layout_marginBottom="20dp"

                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>