<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.info.InfoFragment"
    android:background="#252223"

    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_heading"
        android:layout_margin="10dp"
        android:background="#252223"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_subtitle"
                android:padding="@dimen/padding_regular"
                android:textColor="#FFFFFF"

                android:textAppearance=
                    "@android:style/TextAppearance.DeviceDefault"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/coffee"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/pastuh"/>
            <TextView
                android:id="@+id/article2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/coffee1"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/coffee"
                />
            <TextView
                android:id="@+id/article3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/coffee2"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>