<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#252223">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:padding="@dimen/padding_regular"
            android:text="@string/starbucks_madeo_ru"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"/>


    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
     >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy6"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy1"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy2"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy3"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy4"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy5"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giphy7"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxWidth="450dp"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:layout_margin="10dp"
                android:src="@drawable/giph"/>
        </LinearLayout>

    </HorizontalScrollView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp">
            <TextView
                android:id="@+id/article2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/poem"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"/>
            </LinearLayout>

            <TextView
                android:id="@+id/article3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/coffee_article"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/serna"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>